Form submission with blank target is broken.

The UIWebView's implementation required a call to register the load of the
form post request. However, this is no longer needed with WKWebView's
callbacks. This removes the early |registerLoadRequest:referrer:transition:|
call which was added for UIWebView and is no longer needed.

TEST=Test that popups are blocked when expected, and shown when the user
initiates them. I used popuptest.com to validate and there is also a
link at the bottom of the page to “good” user-initiated popups that
should not be blocked. The results looked good to me after this change.
BUG=702755

Review-Url: https://codereview.chromium.org/2763173002
Cr-Commit-Position: refs/heads/master@{#460688}

Former-commit-id: 9736d7d0d0c9999c239e43486a901b1f4a61cbdd